Fri Jul 24 14:41:19 1998  Michael Snyder  <msnyder@cleaver.cygnus.com>

	* tracepoint.c (encode_actions): Treat register names and simple
	variable names as special cases and don't convert them to byte-
	codes: these things can be collected far more efficiently 
	without invoking the bytecode interpreter.

Fri Jul 24 13:32:46 1998  Mark Alexander  <marka@cygnus.com>

	* config/i386/tm-i386.h (STORE_STRUCT_RETURN): Make it
	work on hosts of any endianness.
	* config/i386/tm-i386v.h: Ditto.

Fri Jul 24 07:41:12 1998  Mark Alexander  <marka@cygnus.com>

	* mn10300-tdep.c (set_movm_offsets): New helper function
	for mn10300_analyze_prologue.
	(mn10300_analyze_prologue): Simplify by factoring out common code.
	Fix bugs in setting frame address for optimized code.
	Use read_memory_nobpt instead of target_read_memory.

Thu Jul 23 17:01:17 1998  Michael Snyder  <msnyder@cleaver.cygnus.com>

	* tracepoint.c (collect_symbol): handle LOC_ARG case.

Thu Jul 23 15:07:40 1998  Dawn Perchik  <dawn@cygnus.com>

	* sparc-tdep.c (sparc_init_extra_frame_info): Recognize when we're
	in a function prologue before the SAVE instruction.
	(sparc_frame_saved_pc): Ditto.
	* config/sparc/tm-sparc.h (EXTRA_FRAME_INFO): Add in_prologue flag.

Thu Jul 23 14:58:09 1998  Dawn Perchik  <dawn@cygnus.com>

	* i386-tdep.c (i386_get_frame_setup): Recognize function
	prologues in code compiled with -fcheck-stack.

Thu Jul 23 14:49:27 1998  Dawn Perchik  <dawn@cygnus.com>

	* remote-mips.c (remote_mips_insert_hw_breakpoint,
	remote_mips_remove_hw_breakpoint): New functions for hardware
	breakpoints on LSI targets.
	* config/mips/tm-embed.h (target_remove_hw_breakpoint,
	target_insert_hw_breakpoint): Define to call
	remote_mips_insert_hw_breakpoint and remote_mips_remove_hw_breakpoint,
	respectively.

start-sanitize-sky
Thu Jul 23 13:00:28 1998  Ian Carmichael  <iancarm@cygnus.com>

        * txvu-tdep.c: (VU0_MEM0_WINDOW_START, VU1_MEM0_WINDOW_START)
        Changed to use addresses in kseg1 range.
